для препаратов от ВИЧ сделал формат стоимости 1/12 банок

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3319,10 +3319,12 @@ small, .small {
 
 .catalog-item__prices .price-label {
     font-size: 11px;
+    display: block;
 }
 
 .catalog-item__prices .price-value {
     font-size: 18px;
+    display: block;
 }
 
 .catalog-item__button {
