--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3683,6 +3683,11 @@ body[class*="page-brands-"] .category__body .image {
     margin: 0;
 }
 
+.product-sidebar .catalog-item__announce {
+    font-size: 13px;
+    line-height: 1.4em;
+}
+
 .product-brand-info,
 .product-related-products {
     margin-top: 30px;
