--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,14 +1,3 @@
-@media (max-width: 1199px) {
-    .team-list {
-        margin: 0 -10px -20px;
-    }
-
-    .team {
-        padding: 0 10px;
-        margin-bottom: 20px;
-    }
-}
-
 @media (max-width: 1199px) and (min-width: 992px) {
 
     .team__data-holder {
@@ -71,10 +60,6 @@
 }
 
 @media (min-width: 992px) {
-
-    .lead-payment-form {
-        padding: 0 100px;
-    }
 
     .row-flex {
         flex-wrap: wrap;
@@ -315,81 +300,13 @@
     }
 }
 
-@media (max-width: 1200px) {
-    .form-home {
-        background: none;
-    }
-    .category-item__image {
-        width: 200px;
-    }
-}
-
-@media (min-width: 1200px) {
-
-    .inst-order > div:nth-child(1):after {
-        top: 14px;   
-    }
-
-    .inst-order > div:not(:last-child) {
-        padding-right: 138px;
-    }
-
-    .inst-order > div:nth-child(2) {
-        padding-right: 168px;
-    }
-
-    .inst-order > div:nth-child(2):after {
-        right: -23px;
-        top: 60px;
-    }
-
-    .inst-order > div:nth-child(3):after {
-        right: -30px;
-        top: 20px;
-    }
-}
-
 @media (min-width: 1240px) {
     .container {
         width: 1200px;
     }
 }
 
-@media all and (-ms-high-contrast: none) and (max-width: 991px) {
-
-    .block-advantage .media-top svg {
-        height: 50px
-    }
-
-}
-
-@media (max-width: 991px) and (min-width: 568px) {
-
-    .inst-order > div:nth-child(odd):after {
-        position: absolute;
-        right: -81px;
-        top: 17px;
-    }
-
-    .inst-order > div:nth-child(even):after {
-        display: none
-    }
-
-    .inst-order > div:first-child {
-        margin-bottom: 60px;
-    }
-
-    .inst-order > div {
-        width: 50%;
-    }
-
-}
-
 @media (max-width: 991px) {
-
-    #main-menu-catalog .icon {
-        display: none;
-    }
 
     #main-menu-catalog > a,
     .wsmenu > .wsmenu-list > li > .navtext, .wsmenu > .wsmenu-list > li:hover > .navtext, .wsmenu > .wsmenu-list > li.active > .navtext {
@@ -406,26 +323,6 @@
     .wsmenu > .wsmenu-list > li > .wsshoptabing.wtsdepartmentmenu a {
         color: #fff;
         text-decoration: none !important;
-    }
-    
-    .synced-carousel-thumbs {
-        padding: 0 10px;
-    }
-
-    .portfolio-page {
-        padding: 0
-    }
-
-    .portfolio-page__content {
-        margin-top: 20px;
-    }
-
-    .portfolio-page__body {
-        flex-wrap: wrap;
-    }
-
-    .portfolio-page__body > div[class*="col"] {
-        overflow: hidden;
     }
 
     .nav.nav-tabs.nav-tabs-scroll {
@@ -447,10 +344,6 @@
         left: 50%;
         margin-left: -16px;
         top: 0;
-    }
-
-    .block-advantage {
-        margin-bottom: 30px;
     }
 
     .additional-list__link {
@@ -539,39 +432,12 @@
         text-decoration: none
     }
 
-    .payment-type {
-        margin-bottom: 30px;
-    }
-
-    .team__content {
-        margin-top: 30px;
-    }
-
-    .team__data-holder {
-        flex-direction: column;
-    }
-
-    .team__image {
-        margin-right: 0;
-        width: 180px;
-        align-self: center;
-    }
-
     .breadcrumb {
         flex-wrap: wrap;
     }
 
     .l-blok-contacts {
         margin-bottom: 40px;
-    }
-
-    .category-colors {
-        flex-wrap: wrap;
-    }
-
-    .category-colors > .tab-content {
-        order: -1;
-        flex: 1 0 100%;
     }
 
     .color-tabs.nav.nav-tabs {
@@ -689,7 +555,7 @@
         display: flex;
         align-items: center;
         position: relative;
-        padding: 13px 0;
+        padding: 17px 0;
     }
 
     .wsmobileheader__holder .logo {
@@ -733,8 +599,8 @@
     }
 
     .wsmenu > .wsmenu-list > li > .wsmenu-click > i {
-        color: rgba(0, 0, 0, .6);
-        margin-top: 10px;
+        color: #fff;
+        margin-top: 12px;
     }
 
     .wsmenu>.wsmenu-list>li>.wsshoptabing>.wsshopwp>.wstabitem>li>a {
@@ -832,385 +698,322 @@
 
 @media (max-width: 767px) {
 
-    .content-slider__item-content {
-        top: 50%;
-        left: 20px;
-        transform: translate(0, -50%);
-        width: auto; 
-        right: 20px;
-        text-align: center;
-    }
-
-    .modal-dialog {
-        width: calc(100% - 20px);
-        max-width: 600px;
-    }
-
-    .form-faq {
-        padding: 20px 0;
-    }
-
-    .portfolio-slider__carousel {
-        padding: 0;
-    }
-
-    .request-form__body .btn {
-        width: 100%;
-    }
-
-    .request-form__body > div[class*="field"] {
-        margin-right: 0 !important
-    }
-
-    .request-form__body,
-    .form__row--columns {
-        flex-wrap: wrap;
-    }
-
-    .form__col {
-        width: 100%;
-        flex: 1 1 100%;
-        max-width: 100%;
-    }
-
-    .form__col + .form__col {
-        margin-top: 30px;
-    }
-
-    .calculator__controls,
-    .calculator__info {
-        padding: 30px 20px;
-    }
-
-    .nav.nav-tabs.nav-tabs-scroll {
-        justify-content: flex-start;
-        overflow: auto;
-    }
-
-    .footer > div {
-        width: 100%;
-    }
-
-    .footer > div + div {
-        margin-top: 12px;
-    }
-
-    .form-home__form .form-group button {
-        display: block;
-        width: 100%
-    }
-
-    .review-block {
-        padding: 22px 20px;
-    }
-
-    .review-block .media-left {
-        margin-bottom: 20px;
-    }
-
-    .review-block .media-left,
-    .review-block .media-right,
-    .review-block .media-body {
-        display: block;
-        width: 100%;
-    }
-
-    .content-slider__item {
-        display: flex;
-        height: 300px;
-        align-items: center;
-        justify-content: flex-start;
-        overflow: hidden;
-    }
-
-    .owl-carousel .owl-item .content-slider__item img {
-        width: auto;
-    }
-
-}
-
-@media (max-width: 567px) {
-
-    .nav.nav-tabs.tabs-bp-sm {
-        flex-wrap: wrap;
-    }
-
-    .nav.nav-tabs.tabs-bp-sm > li {
-        width: 100%;
-    }
-
-    .nav.nav-tabs.tabs-bp-sm > li + li {
-        margin-top: 6px;
-    }
-
-    .nav.nav-tabs.tabs-bp-sm > li > a {
-        display: block;
-        margin: 0;
-        text-align: center;
-    }
-
-    .catalog-info__bottom {
-        justify-content: flex-start;
-    }
-
-    .payment-type {
-        padding: 20px 30px;
-    }
-
-    .team {
-        width: 100%;
-        flex: 1 0 100%;
-        max-width: 100%
-    }
-
-    .category-item__content-bottom {
-        flex-wrap: wrap;
-    }
-
-    .category-item__actions {
-        margin-left: 0;
-        margin-top: 20px;
-        width: 100%;
-    }
-
-    .category-item__actions > .btn,
-    .form-contact__form .btn {
-        width: 100%;
-    }
-
-    .category-item__params {
-        column-count: 1;
-    }
-
-    .category-item__slider {
-        width: 100%;
-    }
-
-    .category-colors img {
-        max-width: 100%
-    }
-
-    .category-color__label {
-        width: 100%;
-    }
-
-    .color-tabs.nav.nav-tabs {
-        margin: 30px -5px 0;
-    }
-
-    .color-tabs.nav.nav-tabs a,
-    .color-tabs.nav.nav-tabs a .category-color__label,
-    .color-tabs.nav.nav-tabs a .category-colors__category-color {
-        height: 100%;
-    }
-
-    .color-tabs.nav.nav-tabs a .category-color__name {
-        flex-grow: 1;
-    }
-
-    .category-colors__category-color {
-        padding: 5px;
-        margin: 0;
-        width: 100%;
-    }
-
-    .color-tabs > li {
-        width: 33.3333%
-    }
-
-    .category-color__label {
-        box-shadow: 0 1px 3px rgba(000, 000, 000, .2);
-        padding: 20px 12px;
-    }
-
-    .content-block.content-block--slider {
-        padding-bottom: 20px;
-    }
-
-    .calculator__body {
-        padding: 0
-    }
-
-    .row-advantages > div[class*="col"] + div[class*="col"] {
-        margin-top: 30px;
-    }
-
-    .title-home {
-        font-size: 20px;
-    }
-
-    .spisok {
-        padding: 0
-    }
-
-    .calculator__param-value {
-        min-width: 110px;
-        padding-left: 12px;
-    }
-
-    .catalog-info__bottom,
-    .calculator__info-bottom {
-        flex-wrap: wrap;
-    }
-
-    .calculator__info-bottom > div {
-        width: 100%;
-    }
-
-    .calculator__info-bottom .btn {
-        width: 100%;
-    }
-
-    .calculator__price-value {
-        margin-bottom: 20px;
-    }
-
-    .catalog-info__bottom .btn {
-        margin-top: 20px;
-        width: 100%;
-        margin-left: 0
-    }
-
-    .inst-order > div:nth-child(odd):after,
-    .inst-order > div:nth-child(even):after {
-        transform: rotate(90deg);
-        margin-right: -28px;
-        top: 100%;
-    }
-
-    .inst-order > div:nth-child(odd):after {
-        right: 0;
-    }
-
-    .inst-order > div:nth-child(even):after {
-        left: 0;
-        right: auto;
-        margin-left: -28px;
-    }
-
-    .inst-order > div {
-        width: 100%;
-        margin-bottom: 60px;
-    }
-
-    .footer-1 {
-        padding-bottom: 20px;
-    }
-
-    .spisok {
-        columns: 2;
-        -webkit-columns: 2;
-        -moz-columns: 2;
-    }
-
-    .button-block {
-        margin-bottom: 30px;
-    }
-
-    .button-block .btn-home-1 {
-        display: block;
-        width: 100%;
-        margin: 0
-    }
-
-    .button-block .btn-home-1 + .btn-home-1 {
-        margin-top: 12px;
-    }
-
-    .romb-lines:before, .romb-lines:after {
-        width: 140px
-    }
-
-    .editor-content,
-    .editor-content p {
+    body {
         font-size: 13px;
     }
 
-    .form-home {
-        background: #f1e6db;
+    .wsmenu > .wsmenu-list > li > .navtext {
+        height: auto !important;
     }
 
-    .footer {
-        font-size: 11px;
+    .content-block__title {
+        font-size: 24px;
+        line-height: 1.3em;
     }
 
-    .content-block--slider,
-    .content-block--specials {
+    .content-block + .content-block {
+        padding-top: 30px;
+    }
+
+    .fast-consult__block {
+        margin-top: 0;
+    }
+
+    .fast-consult {
+        margin-top: 20px;
+    }
+
+    .fast-consult__social-icons {
+        text-align: center;
+        margin-top: 20px;
+    }
+
+    .fast-consult__title {
+        line-height: 1.1em;
+        margin-bottom: 5px;
+    }
+
+    .certificates {
+        display: block;
+        white-space: nowrap;
+        overflow-x: auto;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .certificates a + a {
+        margin-left: 20px;
+    }
+
+    .category-item {
+        box-shadow: none;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .category-item + .category-item {
+        margin-top: 0;
+    }
+
+    .category-item__content {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .category-item__image {
+        width: 100%;
+        border: 1px solid #ddd;
+    }
+
+    .content-block__bottom-promo {
         display: none;
     }
-}
 
-@media (max-width: 420px) {
-
-    .wsmenu > .wsmenu-list > li > .wsmenu-click > i {
-        line-height: 23px;
-    }
-
-    .item.content-slider__item {
-        height: 264px;
-    }
-
-    .content-block--slider .owl-dots {
-        bottom: 14px;
-    }
-
-    .content-block--slider .carousel {
-        margin: 0 -15px;
-    }
-
-    .content-slider__item-content .btn {
+    .category-item__actions,
+    .category-item__actions .btn {
         display: block;
         width: 100%;
-        margin: 8px 0;
     }
 
-    .content-slider__item-row--1 {
-        font-size: 22px;
-        line-height: 28px;
+    body[class*="page-brands-"] .category__body .image {
+        float: none;
+        margin: 0 0 20px;
+        border: 1px solid #ddd;
     }
 
-    .content-slider__item-content .btn + .btn {
-        margin-left: 0
+    body.page-brands .content-block--children-items {
+        padding-top: 0;
     }
 
-    .color-tabs > li {
-        width: 50%;
+    .category-list .category-item:first-child {
+        padding-top: 0;
     }
 
-    .editor-content table > thead > tr > th, .editor-content table > tbody > tr > th, .editor-content table > tbody > tr > td {
+    .footer-bottom {
+        text-align: center;
+        line-height: 1.2em;
         font-size: 12px;
     }
 
-    .editor-content table tr th:first-child, .editor-content table tr td:first-child {
-        width: auto;
-    }
-}
-
-@media (max-width: 380px) {
-    .editor-content table {
-        margin: 0 -15px;
-        width: calc(100% + 30px);
+    .footer-bottom p {
+        margin-bottom: 5px;
     }
 
-    .editor-content table > thead > tr > th:first-child, 
-    .editor-content table > tbody > tr > th:first-child, 
-    .editor-content table > tbody > tr > td:first-child {
-        border-left: 0 none;
+    .footer-middle [class*="col-"].last {
+        text-align: center;
     }
 
-    .editor-content table > thead > tr > th:last-child, 
-    .editor-content table > tbody > tr > th:last-child, 
-    .editor-content table > tbody > tr > td:last-child {
-        border-right: 0 none;
+    .footer-middle [class*="col-"].last .block {
+        margin-top: 30px;
     }
 
-    .editor-content table > thead > tr > th, .editor-content table > tbody > tr > th, .editor-content table > tbody > tr > td {
-        padding: 8px 4px;
+    .footer-middle .textwidget {
+        padding-left: 0;
     }
-}
 
-@media (width: 320px) {
-    .wsmobileheader__holder .logo {
-        margin-left: 0
+    .footer-middle .bottom-panel__icons + .creative_header_address {
+        margin-top: 15px;
+    }
+
+    .creative_header_icon {
+        margin-right: 15px;
+    }
+
+    .footer-menu {
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .footer-menu ul li + li {
+        margin-top: 15px;
+    }
+
+    .footer-middle {
+        padding-top: 30px;
+    }
+
+    .question {
+        position: relative;
+    }
+
+    .question:before {
+        content: "";
+        background: rgba(0,0,0,.3);
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    .question__title {
+        padding: 30px 30px 0;
+        font-size: 20px;
+        line-height: 1.2em;
+    }
+
+    .question__form {
+        padding: 30px;
+    }
+
+    .breadcrumb {
+        white-space: nowrap;
+        flex-wrap: unset;
+        overflow-y: auto;
+    }
+
+    .breadcrumb li.active {
+        display: inline-block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .article-item__content,
+    .article-item:hover .article-item__content {
+        top: 100px;
+    }
+
+    .article-item__params {
+        height: auto;
+    }
+
+    .page-video [data-key="0"] > a,
+    .articles [data-key="0"] .article-item {
+        margin-top: 0;
+    }
+
+    .category__body .image {
+        float: none !important;
+        margin-bottom: 20px;
+    }
+
+    .page-contacts .category__body h2 {
+        margin-top: 0;
+    }
+
+    .product-layout {
+        display: block;
+    }
+
+    .main-catalog__subtitle {
+        margin: 15px 0 30px;
+        font-size: 18px;
+        text-align: center;
+    }
+
+    .review-item {
+        display: block;
+    }
+
+    .review-item__left,
+    .review-item__right {
+        width: 100%;
+    }
+
+    .review-item__right {
+        margin-left: 0;
+        border-top: 0;
+    }
+
+    .review-item__audio-left {
+        display: none;
+    }
+
+    .review-item__audio-right {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .faq-item__question,
+    .faq-item__answer {
+        padding: 15px;
+    }
+
+    .faq-item__answer-info {
+        border: 0 none;
+        padding-left: 0;
+    }
+
+    .faq-item__question-info {
+        border: 0 none;
+        padding-left: 0;
+    }
+
+    .faq-item__question-title:before, .faq-item__answer-title:before {
+        display: none;
+    }
+
+    .faq-block {
+        margin: 30px 0;
+    }
+
+    .faq-block-item {
+        margin-bottom: 20px;
+    }
+
+    .faq-block-item__button {
+        margin-bottom: 0;
+    }
+
+    .faq-block-item__question-text,
+    .faq-block-item__answer-text {
+        min-height: 0;
+    }
+
+    .quality-protection {
+        display: block;
+    }
+
+    .quality-protection > div {
+        width: 100%;
+    }
+
+    .quality-protection > div + div {
+        margin-top: 20px;
+    }
+
+    .content-block--fillwidth-bg {
+        margin-top: 0;
+    }
+
+    .content-block--video {
+        padding-top: 10px !important;
+    }
+
+    .em_feature-icon,
+    .feature_left_side .em_feature-icon {
+        float: none;
+        margin-left: 0;
+        overflow: hidden;
+        text-align:center;
+        margin-right: 0;
+    }
+
+    .kc_column, .kc_column_inner {
+        width: 100%;
+    }
+
+    .em_content_text,
+    .kc_single_image {
+        text-align: center;
+        overflow: hidden;
+    }
+    
+    .kc_single_image {
+        margin-top: -20px;
+        margin-bottom: 30px;
+    }
+
+    .content-block--main-catalog {
+        padding-top: 0 !important;
+    }
+
+    .catalog-item__info {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .features .em-feature {
+        margin-bottom: 20px;
     }
 }
