--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1036,4 +1036,7 @@
     .features .em-feature {
         margin-bottom: 20px;
     }
+    .page-front .wrap {
+        position: static;
+    }
 }
