--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,12 @@
 html,
 body {
     height: 100%;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
 a:not(.btn) {
