--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2664,7 +2664,7 @@ body.page-front .content-block--main-catalog .btn.btn-primary.btn-lg {
 .certificates {
     background-color: #0482AA;
     padding-top: 40px !important;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
     margin-top: 20px;
     display: flex;
     justify-content: center;
@@ -3860,10 +3860,34 @@ body[class*="page-brands-"] .category__body .image {
     padding-bottom: 0;
 }
 
+/**/
+
 .content-block--products__video {
     margin-bottom: 40px;
 }
 
 .content-block--products__video .h2 {
     margin-bottom: 0;
+}
+
+.certificates-block__button {
+    text-align: center;
+}
+
+.certificates-block__button .btn {
+    background: #FFC700 !important;
+    border-color: #FFC700 !important;
+    color: #444;
+    border-radius: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-top: -25px;
+}
+
+.certificates-block__button .btn:hover,
+.certificates-block__button .btn:active,
+.certificates-block__button .btn:focus {
+    background: #ffe074 !important;
+    border-color: #ffe074 !important;
+    color: #444;
 }
