--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3891,3 +3891,77 @@ body[class*="page-brands-"] .category__body .image {
     border-color: #ffe074 !important;
     color: #444;
 }
+
+/** subscribe **/
+
+.section-subcribe {
+    padding: 30px 0 20px;
+    background: #f7f7f7;
+}
+
+#lead-subscribe-form,
+#lead-subscribe-form .btn {
+    vertical-align: top;
+}
+
+#lead-subscribe-form .form-group {
+    margin-bottom: 0;
+}
+
+#lead-subscribe-form .btn {
+    padding: 9px 12px;
+}
+
+.section-subcribe__title {
+    margin: -8px 0 0;
+    padding: 0;
+    font-size: 20px;
+    font-weight: 600;
+    color: #15C9CD;
+}
+
+.section-subcribe__title:before {
+    content: "";
+    background: rgba(255,199,0, 1);
+    height: 10px;
+    width: 10px;
+    border-radius: 10px;
+    display: inline-block;
+    position: relative;
+    top: -2px;
+    margin-right: 10px;
+    box-shadow: 0 0 0 rgba(255,199,0, 0.4);
+    animation: pulse 2s infinite;
+}
+
+.section-subcribe__hint {
+    font-size: 12px;
+    padding-left: 20px;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(255,199,0, 0.4);
+  }
+  70% {
+      -webkit-box-shadow: 0 0 0 10px rgba(255,199,0, 0);
+  }
+  100% {
+      -webkit-box-shadow: 0 0 0 0 rgba(255,199,0, 0);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(255,199,0, 0.4);
+    box-shadow: 0 0 0 0 rgba(255,199,0, 0.4);
+  }
+  70% {
+      -moz-box-shadow: 0 0 0 10px rgba(255,199,0, 0);
+      box-shadow: 0 0 0 10px rgba(255,199,0, 0);
+  }
+  100% {
+      -moz-box-shadow: 0 0 0 0 rgba(255,199,0, 0);
+      box-shadow: 0 0 0 0 rgba(255,199,0, 0);
+  }
+}
